# CrabDuino

./: .gitignore  DEVELOPER.md  IMPROVEMENTS.md  LICENSE.md  PACKAGING.md  README.md
.github/workflows/: deploy-pages.yml
firmware/: Cargo.toml
firmware-test/: Cargo.toml  Ravedude.toml
firmware/src/: main.rs
ide/: README.md
ide/src-tauri/: Cargo.toml  tauri.conf.json
ide/src-tauri/package-resources/: README.md
ide/src-tauri/src/: lib.rs  main.rs
ide/ui/: app.js  codemirror-github.css  index.html  styles.css
scripts/: package-linux-deb.sh
website/: CNAME  index.html  robots.txt  script.js  sitemap.xml  styles.css
