[package]
name = "firmware"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# Each file under src/bin/ is its own binary (blink, screen, …). The IDE builds
# the open file with `--bin <name>`; a bare `cargo run` falls back to blink.
default-run = "blink"

[dependencies]
panic-halt = "1.0.0"
ufmt = "0.2.0"
nb = "1.1.0"
embedded-hal = "1.0"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "e5c8f37fe48419956e722490a82b9ca9b9fc61a2"
features = ["arduino-uno"]

# AVRs have very little program memory — keep binaries tiny.
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
